--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Inventario_Sprint_1_.jar
+dist.jar=${dist.dir}/SIGACI.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.bcmail-jdk14-136.jar=lib_jasperreport\\bcmail-jdk14-136.jar
