--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -60,7 +60,8 @@ javac.classpath=\
     ${file.reference.jdtcore-3.1.0.jar}:\
     ${file.reference.jfreechart-1.0.12.jar}:\
     ${file.reference.xml-apis-1.3.02.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${libs.SwingX.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -85,7 +86,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=cr.ac.una.ingenieria.appMVC.Main.InventarioSprint
+main.class=cr.ac.una.ingenieria.appMVC.Main.InventarioMain
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
