--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,6 +41,7 @@ file.reference.jcalendar-1.4.jar=jcalendar-1.4.jar
 file.reference.jcommon-1.0.15.jar=lib_jasperreport\\jcommon-1.0.15.jar
 file.reference.jdtcore-3.1.0.jar=lib_jasperreport\\jdtcore-3.1.0.jar
 file.reference.jfreechart-1.0.12.jar=lib_jasperreport\\jfreechart-1.0.12.jar
+file.reference.swingx-all-1.6.4.jar=swingx-all-1.6.4.jar
 file.reference.xml-apis-1.3.02.jar=lib_jasperreport\\xml-apis-1.3.02.jar
 includes=**
 jar.compress=false
@@ -61,7 +62,8 @@ javac.classpath=\
     ${file.reference.jfreechart-1.0.12.jar}:\
     ${file.reference.xml-apis-1.3.02.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${libs.SwingX.classpath}
+    ${libs.SwingX.classpath}:\
+    ${file.reference.swingx-all-1.6.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
