--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,6 +32,7 @@ excludes=
 file.reference.bcmail-jdk14-136.jar=lib_jasperreport\\bcmail-jdk14-136.jar
 file.reference.bcprov-jdk14-136.jar=lib_jasperreport\\bcprov-jdk14-136.jar
 file.reference.commons-beanutils-1.8.0.jar=lib_jasperreport\\commons-beanutils-1.8.0.jar
+file.reference.commons-codec-1.10.jar=commons-codec-1.10\\commons-codec-1.10.jar
 file.reference.commons-collections-2.1.jar=lib_jasperreport\\commons-collections-2.1.jar
 file.reference.commons-digester-1.7.jar=lib_jasperreport\\commons-digester-1.7.jar
 file.reference.commons-logging-1.0.2.jar=lib_jasperreport\\commons-logging-1.0.2.jar
@@ -63,7 +64,8 @@ javac.classpath=\
     ${file.reference.xml-apis-1.3.02.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${libs.SwingX.classpath}:\
-    ${file.reference.swingx-all-1.6.4.jar}
+    ${file.reference.swingx-all-1.6.4.jar}:\
+    ${file.reference.commons-codec-1.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
