--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,7 +42,7 @@ file.reference.jcalendar-1.4.jar=jcalendar-1.4.jar
 file.reference.jcommon-1.0.15.jar=lib_jasperreport\\jcommon-1.0.15.jar
 file.reference.jdtcore-3.1.0.jar=lib_jasperreport\\jdtcore-3.1.0.jar
 file.reference.jfreechart-1.0.12.jar=lib_jasperreport\\jfreechart-1.0.12.jar
-file.reference.swingx-all-1.6.4.jar=swingx-all-1.6.4.jar
+file.reference.swingx.jar=C:\\Program Files\\NetBeans 8.1\\utilidades\\swingx.jar
 file.reference.xml-apis-1.3.02.jar=lib_jasperreport\\xml-apis-1.3.02.jar
 includes=**
 jar.compress=false
@@ -64,8 +64,8 @@ javac.classpath=\
     ${file.reference.xml-apis-1.3.02.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${libs.SwingX.classpath}:\
-    ${file.reference.swingx-all-1.6.4.jar}:\
-    ${file.reference.commons-codec-1.10.jar}
+    ${file.reference.commons-codec-1.10.jar}:\
+    ${file.reference.swingx.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
